{
    "name": "PlayerCustomActions",
    "maps": [
        {
            "name": "Main",
            "id": "70fb6bab-25ca-49e3-aee6-45b2aade4597",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "e9a10bd5-cd85-4fe3-89a9-1ca54cb51d71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera1",
                    "type": "Button",
                    "id": "336c5063-ec30-443f-ac70-6468798f31a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera2",
                    "type": "Button",
                    "id": "6eec81b2-9f74-47b6-a3f6-85940d100159",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera3",
                    "type": "Button",
                    "id": "0f19afa9-b0ee-4db0-b56f-dd689b16b0f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3dfd58e-0ac3-47ad-b067-8ddde381f5aa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c02b16fd-832b-4acd-b58b-890faf4a544e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc6c4532-dc60-4887-b59a-a142dea1a058",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f08f362-eb18-4c4e-9316-3e2aa2a721aa",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}